src/BasicInterpreter/AntlrGenerated/BasicParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.0
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from Basic.g4 by ANTLR 4.13.0

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace JesseFreeman.BasicInterpreter.AntlrGenerated {
using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.0")]
[System.CLSCompliant(false)]
public partial class BasicParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		DOLLAR=1, PERCENT=2, RETURN=3, PRINT=4, GOTO=5, GOSUB=6, IF=7, NEXT=8, 
		THEN=9, REM=10, CHR=11, MID=12, LEFT=13, RIGHT=14, STR=15, LPAREN=16, 
		RPAREN=17, PLUS=18, MINUS=19, TIMES=20, DIV=21, CLEAR=22, GTE=23, LTE=24, 
		GT=25, LT=26, COMMA=27, LIST=28, RUN=29, END=30, LET=31, EQ=32, FOR=33, 
		TO=34, STEP=35, INPUT=36, SEMICOLON=37, DIM=38, SQR=39, COLON=40, TEXT=41, 
		HGR=42, HGR2=43, LEN=44, CALL=45, ASC=46, HPLOT=47, VPLOT=48, PRNUMBER=49, 
		INNUMBER=50, VTAB=51, HTAB=52, HOME=53, ON=54, PDL=55, PLOT=56, PEEK=57, 
		POKE=58, INTF=59, STOP=60, HIMEM=61, LOMEM=62, FLASH=63, INVERSE=64, NORMAL=65, 
		ONERR=66, SPC=67, FRE=68, POS=69, USR=70, TRACE=71, NOTRACE=72, AND=73, 
		OR=74, DATA=75, WAIT=76, READ=77, XDRAW=78, DRAW=79, AT=80, DEF=81, FN=82, 
		VAL=83, TAB=84, SPEED=85, ROT=86, SCALE=87, COLOR=88, HCOLOR=89, HLIN=90, 
		VLIN=91, SCRN=92, POP=93, SHLOAD=94, SIN=95, COS=96, TAN=97, ATN=98, RND=99, 
		SGN=100, EXP=101, LOG=102, ABS=103, STORE=104, RECALL=105, GET=106, EXPONENT=107, 
		AMPERSAND=108, GR=109, NOT=110, RESTORE=111, SAVE=112, LOAD=113, INCLUDE=114, 
		CLS=115, COMMENT=116, STRINGLITERAL=117, LETTERS=118, NUMBER=119, FLOAT=120, 
		WS=121, NEWLINE=122;
	public const int
		RULE_prog = 0, RULE_line = 1, RULE_lineWithoutNumber = 2, RULE_amperoper = 3, 
		RULE_linenumber = 4, RULE_amprstmt = 5, RULE_statement = 6, RULE_vardecl = 7, 
		RULE_printstmt1 = 8, RULE_getstmt = 9, RULE_letstmt = 10, RULE_variableassignment = 11, 
		RULE_relop = 12, RULE_neq = 13, RULE_ifstmt = 14, RULE_forstmt1 = 15, 
		RULE_forstmt2 = 16, RULE_nextstmt = 17, RULE_inputstmt = 18, RULE_readstmt = 19, 
		RULE_dimstmt = 20, RULE_gotostmt = 21, RULE_gosubstmt = 22, RULE_pokestmt = 23, 
		RULE_callstmt = 24, RULE_hplotstmt = 25, RULE_vplotstmt = 26, RULE_plotstmt = 27, 
		RULE_ongotostmt = 28, RULE_ongosubstmt = 29, RULE_vtabstmnt = 30, RULE_htabstmnt = 31, 
		RULE_himemstmt = 32, RULE_lomemstmt = 33, RULE_datastmt = 34, RULE_datum = 35, 
		RULE_waitstmt = 36, RULE_xdrawstmt = 37, RULE_drawstmt = 38, RULE_defstmt = 39, 
		RULE_tabstmt = 40, RULE_speedstmt = 41, RULE_rotstmt = 42, RULE_scalestmt = 43, 
		RULE_colorstmt = 44, RULE_hcolorstmt = 45, RULE_hlinstmt = 46, RULE_vlinstmt = 47, 
		RULE_onerrstmt = 48, RULE_prstmt = 49, RULE_instmt = 50, RULE_storestmt = 51, 
		RULE_recallstmt = 52, RULE_liststmt = 53, RULE_popstmt = 54, RULE_amptstmt = 55, 
		RULE_includestmt = 56, RULE_endstmt = 57, RULE_returnstmt = 58, RULE_restorestmt = 59, 
		RULE_number = 60, RULE_func_ = 61, RULE_signExpression = 62, RULE_exponentExpression = 63, 
		RULE_multiplyingExpression = 64, RULE_addingExpression = 65, RULE_relationalExpression = 66, 
		RULE_expression = 67, RULE_var_ = 68, RULE_varname = 69, RULE_varsuffix = 70, 
		RULE_varlist = 71, RULE_exprlist = 72, RULE_sqrfunc = 73, RULE_chrfunc = 74, 
		RULE_lenfunc = 75, RULE_ascfunc = 76, RULE_midfunc = 77, RULE_pdlfunc = 78, 
		RULE_peekfunc = 79, RULE_intfunc = 80, RULE_spcfunc = 81, RULE_frefunc = 82, 
		RULE_posfunc = 83, RULE_usrfunc = 84, RULE_leftfunc = 85, RULE_rightfunc = 86, 
		RULE_strfunc = 87, RULE_fnfunc = 88, RULE_valfunc = 89, RULE_scrnfunc = 90, 
		RULE_sinfunc = 91, RULE_cosfunc = 92, RULE_tanfunc = 93, RULE_atnfunc = 94, 
		RULE_rndfunc = 95, RULE_sgnfunc = 96, RULE_expfunc = 97, RULE_logfunc = 98, 
		RULE_absfunc = 99, RULE_tabfunc = 100;
	public static readonly string[] ruleNames = {
		"prog", "line", "lineWithoutNumber", "amperoper", "linenumber", "amprstmt", 
		"statement", "vardecl", "printstmt1", "getstmt", "letstmt", "variableassignment", 
		"relop", "neq", "ifstmt", "forstmt1", "forstmt2", "nextstmt", "inputstmt", 
		"readstmt", "dimstmt", "gotostmt", "gosubstmt", "pokestmt", "callstmt", 
		"hplotstmt", "vplotstmt", "plotstmt", "ongotostmt", "ongosubstmt", "vtabstmnt", 
		"htabstmnt", "himemstmt", "lomemstmt", "datastmt", "datum", "waitstmt", 
		"xdrawstmt", "drawstmt", "defstmt", "tabstmt", "speedstmt", "rotstmt", 
		"scalestmt", "colorstmt", "hcolorstmt", "hlinstmt", "vlinstmt", "onerrstmt", 
		"prstmt", "instmt", "storestmt", "recallstmt", "liststmt", "popstmt", 
		"amptstmt", "includestmt", "endstmt", "returnstmt", "restorestmt", "number", 
		"func_", "signExpression", "exponentExpression", "multiplyingExpression", 
		"addingExpression", "relationalExpression", "expression", "var_", "varname", 
		"varsuffix", "varlist", "exprlist", "sqrfunc", "chrfunc", "lenfunc", "ascfunc", 
		"midfunc", "pdlfunc", "peekfunc", "intfunc", "spcfunc", "frefunc", "posfunc", 
		"usrfunc", "leftfunc", "rightfunc", "strfunc", "fnfunc", "valfunc", "scrnfunc", 
		"sinfunc", "cosfunc", "tanfunc", "atnfunc", "rndfunc", "sgnfunc", "expfunc", 
		"logfunc", "absfunc", "tabfunc"
	};

	private static readonly string[] _LiteralNames = {
		null, "'$'", "'%'", "'RETURN'", "'PRINT'", "'GOTO'", "'GOSUB'", "'IF'", 
		"'NEXT'", "'THEN'", "'REM'", "'CHR$'", "'MID$'", "'LEFT$'", "'RIGHT$'", 
		"'STR$'", "'('", "')'", "'+'", "'-'", "'*'", "'/'", "'CLEAR'", "'>: '", 
		"'<: '", "'>'", "'<'", "','", "'LIST'", "'RUN'", "'END'", "'LET'", "'='", 
		"'FOR'", "'TO'", "'STEP'", "'INPUT'", "';'", "'DIM'", "'SQR'", "':'", 
		"'TEXT'", "'HGR'", "'HGR2'", "'LEN'", "'CALL'", "'ASC'", "'HPLOT'", "'VPLOT'", 
		"'PR#'", "'IN#'", "'VTAB'", "'HTAB'", "'HOME'", "'ON'", "'PDL'", "'PLOT'", 
		"'PEEK'", "'POKE'", "'INT'", "'STOP'", "'HIMEM'", "'LOMEM'", "'FLASH'", 
		"'INVERSE'", "'NORMAL'", "'ONERR'", "'SPC'", "'FRE'", "'POS'", "'USR'", 
		"'TRACE'", "'NOTRACE'", "'AND'", "'OR'", "'DATA'", "'WAIT'", "'READ'", 
		"'XDRAW'", "'DRAW'", "'AT'", "'DEF'", "'FN'", "'VAL'", "'TAB'", "'SPEED'", 
		"'ROT'", "'SCALE'", "'COLOR'", "'HCOLOR'", "'HLIN'", "'VLIN'", "'SCRN'", 
		"'POP'", "'SHLOAD'", "'SIN'", "'COS'", "'TAN'", "'ATN'", "'RND'", "'SGN'", 
		"'EXP'", "'LOG'", "'ABS'", "'STORE'", "'RECALL'", "'GET'", "'^'", "'&'", 
		"'GR'", "'NOT'", "'RESTORE'", "'SAVE'", "'LOAD'", "'INCLUDE'", "'CLS'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "DOLLAR", "PERCENT", "RETURN", "PRINT", "GOTO", "GOSUB", "IF", "NEXT", 
		"THEN", "REM", "CHR", "MID", "LEFT", "RIGHT", "STR", "LPAREN", "RPAREN", 
		"PLUS", "MINUS", "TIMES", "DIV", "CLEAR", "GTE", "LTE", "GT", "LT", "COMMA", 
		"LIST", "RUN", "END", "LET", "EQ", "FOR", "TO", "STEP", "INPUT", "SEMICOLON", 
		"DIM", "SQR", "COLON", "TEXT", "HGR", "HGR2", "LEN", "CALL", "ASC", "HPLOT", 
		"VPLOT", "PRNUMBER", "INNUMBER", "VTAB", "HTAB", "HOME", "ON", "PDL", 
		"PLOT", "PEEK", "POKE", "INTF", "STOP", "HIMEM", "LOMEM", "FLASH", "INVERSE", 
		"NORMAL", "ONERR", "SPC", "FRE", "POS", "USR", "TRACE", "NOTRACE", "AND", 
		"OR", "DATA", "WAIT", "READ", "XDRAW", "DRAW", "AT", "DEF", "FN", "VAL", 
		"TAB", "SPEED", "ROT", "SCALE", "COLOR", "HCOLOR", "HLIN", "VLIN", "SCRN", 
		"POP", "SHLOAD", "SIN", "COS", "TAN", "ATN", "RND", "SGN", "EXP", "LOG", 
		"ABS", "STORE", "RECALL", "GET", "EXPONENT", "AMPERSAND", "GR", "NOT", 
		"RESTORE", "SAVE", "LOAD", "INCLUDE", "CLS", "COMMENT", "STRINGLITERAL", 
		"LETTERS", "NUMBER", "FLOAT", "WS", "NEWLINE"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Basic.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static BasicParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public BasicParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public BasicParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode Eof() { return GetToken(BasicParser.Eof, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public LineWithoutNumberContext lineWithoutNumber() {
			return GetRuleContext<LineWithoutNumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext[] line() {
			return GetRuleContexts<LineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public LineContext line(int i) {
			return GetRuleContext<LineContext>(i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_prog; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicListener typedListener = listener as IBasicListener;
			if (typedListener != null) typedListener.EnterProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicListener typedListener = listener as IBasicListener;
			if (typedListener != null) typedListener.ExitProg(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicVisitor<TResult> typedVisitor = visitor as IBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProg(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgContext prog() {
		ProgContext _localctx = new ProgContext(Context, State);
		EnterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			State = 213;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				{
				State = 203;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 202;
					lineWithoutNumber();
					}
					break;
				}
				State = 208;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (((((_la - 119)) & ~0x3f) == 0 && ((1L << (_la - 119)) & 13L) != 0)) {
					{
					{
					State = 205;
					line();
					}
					}
					State = 210;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				State = 211;
				Match(Eof);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 212;
				Match(Eof);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class LineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public LinenumberContext linenumber() {
			return GetRuleContext<LinenumberContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public AmprstmtContext[] amprstmt() {
			return GetRuleContexts<AmprstmtContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public AmprstmtContext amprstmt(int i) {
			return GetRuleContext<AmprstmtContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COMMENT() { return GetToken(BasicParser.COMMENT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode REM() { return GetToken(BasicParser.REM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NEWLINE() { return GetTokens(BasicParser.NEWLINE); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NEWLINE(int i) {
			return GetToken(BasicParser.NEWLINE, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] COLON() { return GetTokens(BasicParser.COLON); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode COLON(int i) {
			return GetToken(BasicParser.COLON, i);
		}
		public LineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_line; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IBasicListener typedListener = listener as IBasicListener;
			if (typedListener != null) typedListener.EnterLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IBasicListener typedListener = listener as IBasicListener;
			if (typedListener != null) typedListener.ExitLine(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IBasicVisitor<TResult> typedVisitor = visitor as IBasicVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitLine(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public LineContext line() {
		LineContext _localctx = new LineContext(Context, State);
		EnterRule(_localctx, 2, RULE_line);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 215;
			linenumber();
			State = 217;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==NEWLINE) {
				{
				State = 216;
				Match(NEWLINE);
				}
			}

			State = 231;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				{
				State = 219;
				amprstmt();
				State = 226;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==COLON) {
					{
					{
					State = 220;
					Match(COLON);
					State = 222;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & -756694541133675016L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 26941335293589895L) != 0)) {
						{
						State = 221;
						amprstmt();
						}
					}

					}
					}
					State = 228;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			case 2:
				{
				State = 229;
				Match(COMMENT);
				}
				break;
			case 3:
				{
				State = 230;
				Match(REM);
				}
				break;
			}
			State = 234;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,7,Context) ) {
			case 1:
				{
				State = 233;
				Match(NEWLINE);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
